--- a/app/components/header.module.css
+++ b/app/components/header.module.css
@@ -3,7 +3,7 @@
   width: 200px;
   top: 0;
   left: 0;
-  background-color: teal;
+  background-color: rgb(0, 128, 128);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -45,7 +45,6 @@
     width: 100%;
     height: 60px;
     min-height: 60px;
-    background-color: teal;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
